# manifold

./: .gitignore  .gitmodules  .jjignore  .manifold.settings.json  AGENTS.md  AudioPluginHost  CMakeLists.txt  CMakePresets.json  EffectsProcessor.h  GranularEngine.h  LooperCMakeLists.txt  LooperEditor.cpp  LooperEditor.h  LooperLayer.h  LooperProcessor.cpp  LooperProcessor.h  MIDI_IMPLEMENTATION.md  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  TODO_TRACKER.md  example.manifold.settings.json
.cache/clangd/index/: Canvas.cpp.1ADB61CE590031E9.idx  Canvas.h.91E6EDFD89E8C515.idx  CanvasStyle.h.DEC0AF7A8814207D.idx  CaptureBuffer.h.8C5D721D9D6C5B43.idx  CommandParser.h.03B14EE9A785E8E4.idx  ControlServer.cpp.6C7FBAF2E95FC6F6.idx  ControlServer.h.EF08836AB2CE6C19.idx  EffectsProcessor.h.68B8F48F37133425.idx  GranularEngine.h.C01A4F426EF45593.idx  LoopBuffer.h.55C7FDBF66D34A50.idx  LooperEditor.cpp.A91A50BE30E4D50F.idx  LooperEditor.h.B8E57D26251B989B.idx  LooperHeadless.cpp.5B3FD0B73C6A2F5D.idx  LooperLayer.h.D31BF1954980F60A.idx  LooperProcessor.cpp.7154E0CB6B690368.idx  LooperProcessor.h.5E7E07805DEF9452.idx  LuaEngine.cpp.6767FD9B6DDFB4DB.idx  LuaEngine.h.10CAD5E5F944CF5A.idx  Playhead.h.A2C9BD97B128D6E0.idx  PluginEditor.cpp.74F136BCEBCEE17B.idx  PluginEditor.h.3976A7EEEB1D0980.idx  PluginProcessor.cpp.354451EE8BF9E13C.idx  PluginProcessor.h.478DB2E46AC74906.idx  Quantizer.h.218D425D61F805B7.idx  TempoInference.h.02E4C2EA4C529924.idx
.github/workflows/: android.yml
UserScripts/: test_midi.lua
UserScripts/UI/: test_user_ui.lua
UserScripts/projects/LayoutModeDemo/: manifold.project.json5
UserScripts/projects/LooperTabs/: manifold.project.json5
UserScripts/projects/Main/: manifold.project.json5
UserScripts/projects/MidiSynth_uiproject/: manifold.project.json5
UserScripts/projects/RuntimeBenchmark/: manifold.project.json5
UserScripts/projects/Settings/: manifold.project.json5
UserScripts/projects/Standalone_Eq/: manifold.project.json5
UserScripts/projects/Standalone_FX/: manifest.spec.json  manifold.project.json5
UserScripts/projects/Standalone_Filter/: manifold.project.json5
UserScripts/projects/SuperDonut/: manifold.project.json5
agent-docs/NotesCheckpoint200326/: MultitrackAudioArchitecture.md  SystemScripts_Proposal.md
android/: gradle.properties
android/app/: build.gradle
cmake/: FindGRPC.cmake
dsp/core/graph/: PrimitiveNode.h
dsp/core/nodes/: ADSREnvelopeNode.cpp  ADSREnvelopeNode.h  ADSREnvelopeNode_Highway.h  BitCrusherNode.cpp  BitCrusherNode.h  BitCrusherNode_Highway.h  CompressorNode.cpp  CompressorNode.h  CrossfaderNode.cpp  CrossfaderNode.h  DistortionNode.cpp  DistortionNode.h  EQ8Node.cpp  EQ8Node.h  EQNode.cpp  EQNode.h  EnvelopeFollowerNode.cpp  EnvelopeFollowerNode.h  FilterNode.cpp  FilterNode.h  FormantFilterNode.cpp  FormantFilterNode.h  GainNode.cpp  GainNode.h  GranulatorNode.cpp  GranulatorNode.h  LimiterNode.cpp  LimiterNode.h  LoopPlaybackNode.cpp  LoopPlaybackNode.h  MidiInputNode.cpp  MidiInputNode.h  MidiVoiceNode.cpp  MidiVoiceNode.h  MixerNode.cpp  MixerNode.h  MultitapDelayNode.cpp  MultitapDelayNode.h  OscillatorNode.cpp  OscillatorNode.h  (+45 more)
dsp_simd_test/TestNodesApp/: TestNodesApp.sln  TestNodesApp.vcxproj  TestNodesApp.vcxproj.filters  TestNodesProps.props  main.cpp
looper/dsp/: looper_donut_demo_dsp.lua  looper_primitives_dsp.lua
looper/dsp/scripts/: input_reverb_tone.lua  tone_input_chain.lua  tone_test_osc_only.lua
looper/engine/: LooperLayer.h  LooperProcessor.cpp  LooperProcessor.h
looper/headless/: CanonicalCommandHarness.cpp  ControlCommandQueueHarness.cpp  EndpointResolverHarness.cpp  LuaEngineMockHarness.cpp
looper/primitives/control/: CommandParser.h  ControlServer.cpp  ControlServer.h  EndpointResolver.cpp  EndpointResolver.h  OSCEndpointRegistry.cpp  OSCEndpointRegistry.h  OSCQuery.cpp  OSCQuery.h  OSCServer.cpp  OSCServer.h  (+1 more)
looper/ui/: LooperEditor.cpp  LooperEditor.h  dsp_live_scripting.lua  looper_settings_ui.lua  looper_ui.lua  looper_ui_new.lua  looper_ui_old.lua  ui_shell.lua
looper_primitives/: BehaviorCoreEditor.cpp  BehaviorCoreProcessor.cpp  BehaviorCoreProcessor.h
manifold/core/: BehaviorCoreEditor.cpp  BehaviorCoreEditor.h  BehaviorCoreProcessor.cpp  BehaviorCoreProcessor.h
manifold/dsp/: default_dsp.lua  donut_looper_super_dsp.lua  looper_primitives_dsp.lua
manifold/engine/: ManifoldLayer.h
manifold/grpc/: GRPCServer.cpp  GRPCServer.h
manifold/headless/: CanonicalCommandHarness.cpp  EndpointResolverHarness.cpp  LuaEngineMockHarness.cpp  ManifoldHeadless.cpp  StateProjectionHarness.cpp
manifold/highway/: HighwayMaths.h  HighwayWrapper.h
manifold/ui/: UI_SYSTEM_DESIGN.md  donut_looper_super_ui.lua  dsp_live_scripting.lua  editor_core.lua  layout_engine.lua  looper_donut_demo_ui.lua  looper_ui.lua  manifold_settings_ui.lua  manifold_ui_experimental.lua  midi_settings.lua  midi_tab.lua  project_loader.lua  ui_shell.lua  ui_widgets.lua
primitives/dsp/: CaptureBuffer.h  LoopBuffer.h  Playhead.h  Quantizer.h  TempoInference.h
primitives/ui/: Canvas.h
proto/: manifold.proto
prototypes/PitchDetectionProto/: generate_pitch_detection_report.py  pitch_research_1.json  pitch_research_2.json  pitch_research_3.json
prototypes/RackUIPrototype/: manifold-rack-v1.html  prototype-1-clean-dark.html  prototype-2-skeuo-hardware.html  prototype-3-flat-minimal.html  prototype-4-warm-analog.html  prototype-5-high-contrast.html
scripts/: deploy_export_vst3.sh
test_plugins/FirstLoopTempo/: FirstLoopTempoEditor.cpp  FirstLoopTempoEditor.h  FirstLoopTempoPlugin.cpp  FirstLoopTempoPlugin.h  looper_widgets.lua
test_plugins/Tempus/: TempusEditor.cpp  TempusEditor.h  TempusPlugin.cpp  TempusPlugin.h  firstloop_ui.lua  ui_widgets.lua
tests/: e2e_editor_ipc_test.py  main_tab_bar_test.py
tools/: generate_export_manifest.py  legacy-readiness-probe.py  looper-cli  test-baseline-p0  test-looper  test-looper-primitives-smoke  test-ui-shell-smoke
web/remote-control/: app.ts  index.html  package-lock.json  package.json  style.css  tsconfig.json
(+403 files in other folders)
